--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -39,16 +39,39 @@
     {% if grade > 80 %}
     <div class="alert alert-success">
        <!--HINT Display passed info -->
+       Congratulation, {{ user.first_name }}! You have passed with score {{ grade }}/100
     </div>
         {% else %}
         <div class="alert alert-danger">
             <!--HINT Display failed info -->
+            Failed Sorry, {{ user.first_name }}! You have failed exam with score {{ grade }}/100
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
         {% endif %}
         <div class="card-columns-vertical mt-1">
-        <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
+            <h5 class="">Exam results </h5>
+         <!--HINT Display exam results-->
+            {% for question in course.question_set.all %}
+                <div class="card">
+                    <div class="card-header border-light">
+                        <h5>{{question.question_text}}</h5>
+                    </div>
+                    <div class="card-body">
+                        {% for choice in question.choice_set.all %}
+                            {% if choice.is_correct == True and choice in selected_id %}
+                            <p class="card-text" style="color:green">Correct answer: {{choice.choice_text}}</p>
+                            {% elif choice.is_correct == True and choice not in selected_id %}
+                            <p class="card-text" style="color:orange">Not selected: {{choice.choice_text}}</p>
+                            {% elif choice.is_correct == False and choice in selected_id %}
+                            <p class="card-text" style="color:red">Wrong answer: {{choice.choice_text}}</p>
+                            {% else %}
+                            <p class="card-text" style="color:black">{{choice.choice_text}}</p>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                </div>
+            {% endfor %}
+
         </div>
     </div>
 </body>
